HVAC Backup 2/objects/Announcement_Messages__c(1).object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <label>PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference_Link__c</fullName>
        <label>Reference Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>CPSD</fullName>
                </value>
                <value>
                    <fullName>CPAG &amp; CRBG</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>BSL</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Announcement Messages</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Announcement Messages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcement Messages</pluralLabel>
    <recordTypes>
        <fullName>Common</fullName>
        <active>true</active>
        <label>Common</label>
    </recordTypes>
    <recordTypes>
        <fullName>Common_Internal</fullName>
        <active>true</active>
        <description>BSL Employees Only</description>
        <label>Common (Internal)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>